--- a/app/src/main/res/layout/activity_new_medication.xml
+++ b/app/src/main/res/layout/activity_new_medication.xml
@@ -34,9 +34,8 @@
                 android:ems="10"
                 android:padding="@dimen/dimens_10"
                 android:textAlignment="textStart"
-                android:backgroundTint="@color/colorPrimary"
-                android:textColor="@color/colorPrimary"
-                android:textColorHint="@color/colorPrimary"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
                 android:textSize="15sp"
                 android:theme="@style/EditTextTheme" />
 
@@ -62,10 +61,9 @@
                 android:padding="@dimen/dimens_10"
                 android:textAlignment="textStart"
                 android:gravity="start"
-                android:backgroundTint="@color/colorPrimary"
                 android:lines="5"
-                android:textColor="@color/white"
-                android:textColorHint="@color/white"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
                 android:textSize="15sp"
                 android:theme="@style/EditTextTheme" />
 
