--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="dimens_0">0dp</dimen>
     <dimen name="dimens_2">2dp</dimen>
     <dimen name="dimens_5">5dp</dimen>
     <dimen name="dimens_10">10dp</dimen>
