added - month/year section - search view few modifications

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="dimens_0">0dp</dimen>
     <dimen name="dimens_2">2dp</dimen>
+    <dimen name="dimens_3">3dp</dimen>
     <dimen name="dimens_5">5dp</dimen>
     <dimen name="dimens_10">10dp</dimen>
     <dimen name="dimens_20">20dp</dimen>
