--- a/app/src/main/res/layout/content_medication.xml
+++ b/app/src/main/res/layout/content_medication.xml
@@ -5,12 +5,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="@dimen/dimens_10"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.afolayan.med_manager.MedicationActivity"
     tools:showIn="@layout/activity_medication">
 
+    <LinearLayout
+        android:id="@+id/root_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:focusableInTouchMode="true">
+
+        <android.support.v7.widget.SearchView
+            android:id="@+id/search_view"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            app:queryHint="@string/search_hint"
+            android:background="@drawable/transparent_bg"
+            app:iconifiedByDefault="false" />
+
+    </LinearLayout>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/medication_list"
+        android:layout_marginTop="@dimen/dimens_5"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </LinearLayout>
