--- a/app/src/main/res/layout/content_medication.xml
+++ b/app/src/main/res/layout/content_medication.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -27,9 +27,21 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/tv_no_medication"
+        android:text="@string/no_medication_at_this_time"
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/medication_list"
+        android:layout_below="@id/root_layout"
         android:layout_marginTop="@dimen/dimens_5"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-</LinearLayout>
+</RelativeLayout>
