--- a/app/src/main/res/layout/layout_item_single_medication.xml
+++ b/app/src/main/res/layout/layout_item_single_medication.xml
@@ -14,124 +14,135 @@
         android:layout_height="wrap_content">
 
         <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp">
-
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="5dp"
-            android:background="@color/white"
-            android:orientation="vertical"
-            android:padding="5dp">
-
-            <ImageView
-                android:id="@+id/company_logo"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:src="@drawable/ic_medication"
-                android:textSize="35sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-        <LinearLayout android:id="@+id/med_details"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="@dimen/dimens_0"
-            android:layout_marginTop="@dimen/dimens_5"
-            android:layout_toEndOf="@+id/linearLayout"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/tv_med_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:gravity="start"
-                android:textStyle="bold"
-                android:text="Chloramphenicol"
-                android:textColor="@color/light_gray"
-                android:textSize="16sp" />
-
-
-        </LinearLayout>
-        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/med_details"
-            android:layout_marginStart="@dimen/dimens_0"
-            android:layout_marginTop="@dimen/dimens_2"
-            android:layout_marginEnd="@dimen/dimens_20"
-            android:layout_toEndOf="@+id/linearLayout">
+            android:layout_margin="5dp">
+
             <LinearLayout
+                android:id="@+id/linearLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_centerVertical="true"
+                android:layout_marginStart="5dp"
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:padding="5dp">
 
-                <TextView
-                    android:id="@+id/date_start_label"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="start|center_vertical"
-                    android:maxLines="1"
-                    android:paddingTop="5dp"
-                    android:text="@string/from"
-                    android:textColor="@color/light_gray"
-                    android:textSize="10sp" />
-
-                <TextView
-                    android:id="@+id/tv_date_start"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="end|center_vertical"
-                    android:gravity="bottom"
-                    android:layout_marginStart="5dp"
-                    android:text="Pending"
-                    android:textAlignment="center"
-                    android:textColor="@color/light_gray"
-                    android:textSize="10sp" />
+                <ImageView
+                    android:id="@+id/company_logo"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:src="@drawable/ic_medication"
+                    android:textSize="35sp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
+
             <LinearLayout
+                android:id="@+id/med_details"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="@dimen/dimens_0"
+                android:layout_marginTop="@dimen/dimens_5"
+                android:layout_toEndOf="@+id/linearLayout"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_med_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:gravity="start"
+                    android:text="Chloramphenicol"
+                    android:textColor="@color/light_gray"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+
+            </LinearLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/med_details"
+                android:layout_marginEnd="@dimen/dimens_20"
+                android:layout_marginStart="@dimen/dimens_0"
+                android:layout_marginTop="@dimen/dimens_2"
+                android:layout_toEndOf="@+id/linearLayout">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/date_start_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start|center_vertical"
+                        android:maxLines="1"
+                        android:paddingTop="5dp"
+                        android:text="@string/from"
+                        android:textColor="@color/light_gray"
+                        android:textSize="10sp" />
+
+                    <TextView
+                        android:id="@+id/tv_date_start"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="end|center_vertical"
+                        android:layout_marginStart="5dp"
+                        android:gravity="bottom"
+                        android:text="Pending"
+                        android:textAlignment="center"
+                        android:textColor="@color/light_gray"
+                        android:textSize="10sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="@dimen/dimens_20"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/date_end_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start|center_vertical"
+                        android:maxLines="1"
+                        android:paddingTop="5dp"
+                        android:text="@string/to"
+                        android:textColor="@color/light_gray"
+                        android:textSize="10sp" />
+
+                    <TextView
+                        android:id="@+id/tv_date_end"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="end|center_vertical"
+                        android:layout_marginStart="5dp"
+                        android:gravity="bottom"
+                        android:text="Pending"
+                        android:textAlignment="center"
+                        android:textColor="@color/light_gray"
+                        android:textSize="10sp" />
+
+                </LinearLayout>
+            </RelativeLayout>
+            <ImageView
+                android:id="@+id/img_delete"
+                app:srcCompat="@drawable/ic_cancel"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="@dimen/dimens_20"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/date_end_label"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="start|center_vertical"
-                    android:maxLines="1"
-                    android:paddingTop="5dp"
-                    android:text="@string/to"
-                    android:textColor="@color/light_gray"
-                    android:textSize="10sp" />
-
-                <TextView
-                    android:id="@+id/tv_date_end"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="end|center_vertical"
-                    android:gravity="bottom"
-                    android:layout_marginStart="5dp"
-                    android:text="Pending"
-                    android:textAlignment="center"
-                    android:textColor="@color/light_gray"
-                    android:textSize="10sp" />
-
-            </LinearLayout>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
         </RelativeLayout>
-    </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
