added - espresso test

--- a/app/src/main/res/layout/activity_new_medication.xml
+++ b/app/src/main/res/layout/activity_new_medication.xml
@@ -37,6 +37,7 @@
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
                 android:textSize="15sp"
+                android:contentDescription="@string/medication_name_input"
                 android:theme="@style/EditTextTheme" />
 
         </android.support.design.widget.TextInputLayout>
