--- a/app/src/main/res/layout-v21/general_toolbar.xml
+++ b/app/src/main/res/layout-v21/general_toolbar.xml
@@ -2,6 +2,7 @@
 <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
+    android:elevation="4dp"
     android:background="@drawable/gradient"
     app:titleTextColor="@color/white"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
