--- a/app/src/main/res/layout/layout_item_single_medication.xml
+++ b/app/src/main/res/layout/layout_item_single_medication.xml
@@ -29,14 +29,15 @@
                 android:padding="5dp">
 
                 <ImageView
-                    android:id="@+id/company_logo"
+                    android:id="@+id/medication_icon"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:src="@drawable/ic_medication"
                     android:textSize="35sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:contentDescription="@string/icon_text"/>
 
             </LinearLayout>
 
@@ -56,7 +57,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
                     android:gravity="start"
-                    android:text="Chloramphenicol"
+                    android:text="@string/medication_name"
                     android:textColor="@color/light_gray"
                     android:textSize="16sp"
                     android:textStyle="bold" />
@@ -87,7 +88,7 @@
                         android:paddingTop="5dp"
                         android:text="@string/from"
                         android:textColor="@color/light_gray"
-                        android:textSize="10sp" />
+                        android:textSize="12sp" />
 
                     <TextView
                         android:id="@+id/tv_date_start"
@@ -96,10 +97,9 @@
                         android:layout_gravity="end|center_vertical"
                         android:layout_marginStart="5dp"
                         android:gravity="bottom"
-                        android:text="Pending"
                         android:textAlignment="center"
                         android:textColor="@color/light_gray"
-                        android:textSize="10sp" />
+                        android:textSize="12sp" />
 
                 </LinearLayout>
 
@@ -119,7 +119,7 @@
                         android:paddingTop="5dp"
                         android:text="@string/to"
                         android:textColor="@color/light_gray"
-                        android:textSize="10sp" />
+                        android:textSize="12sp" />
 
                     <TextView
                         android:id="@+id/tv_date_end"
@@ -128,20 +128,22 @@
                         android:layout_gravity="end|center_vertical"
                         android:layout_marginStart="5dp"
                         android:gravity="bottom"
-                        android:text="Pending"
                         android:textAlignment="center"
                         android:textColor="@color/light_gray"
-                        android:textSize="10sp" />
+                        android:textSize="12sp" />
 
                 </LinearLayout>
             </RelativeLayout>
+
             <ImageView
                 android:id="@+id/img_delete"
                 app:srcCompat="@drawable/ic_cancel"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="@dimen/dimens_20"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/delete_icon" />
+
         </RelativeLayout>
 
         <View
