--- a/app/src/main/res/layout/list_section_header.xml
+++ b/app/src/main/res/layout/list_section_header.xml
@@ -11,8 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="15dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="15dp"
         tools:text="Title test text"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold"
