--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,8 +6,6 @@
     <dimen name="dimens_5">5dp</dimen>
     <dimen name="dimens_10">10dp</dimen>
     <dimen name="dimens_20">20dp</dimen>
-    <dimen name="dimens_30">30dp</dimen>
-    <dimen name="dimens_40">40dp</dimen>
-    <dimen name="dimens_50">50dp</dimen>
-    <dimen name="dimens_100">100dp</dimen>
+    <dimen name="font_size_14">14sp</dimen>
+    <dimen name="font_size_18">18sp</dimen>
 </resources>
